Update performance.md